# src/swagger.json
@@ -473,24 +473,12 @@
         }
       }
     },
-    "/api/user/{userId}": {
+    "/api/user/id": {
       "get": {
         "operationId": "findUserById",
         "summary": "Find user by id",
         "tags": [
           "User"
-        ],
-        "parameters": [
-          {
-            "schema": {
-              "type": "string",
-              "format": "uuid",
-              "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
-            },
-            "in": "path",
-            "name": "userId",
-            "required": true
-          }
         ],
         "responses": {
           "200": {
